--- a/ios/qrcodescanner/Info.plist
+++ b/ios/qrcodescanner/Info.plist
@@ -67,6 +67,8 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>QRCode</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
