--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,7 +33,9 @@ allprojects {
 
         google()
         jcenter()
-
+        flatDir {
+            dirs 'libs'
+        }
         maven { url 'https://jitpack.io' }
 
     }
